<resources>
    <string name="app_name">Pixiv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Illustrations">Illustrations</string>
    <string name="Manga">Manga</string>
    <string name="Novels">Novels</string>
    <string name="openNavDrawer">Navigation Drawer open</string>
    <string name="closeNavDrawer">Navigation Drawer close</string>
    <string name="pixiv">Pixiv</string>
    <string name="recommended">Recommended</string>
    <string name="popular_lives">Popular Lives</string>
    <string name="pixivvision">PixivVision</string>
    <string name="rankings">Rankings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="about_pixiv_premium">About pixiv Premium</string>
    <string name="views">views</string>
    <string name="name">name</string>
    <string name="manga">Manga</string>
    <string name="tile">tile</string>
    <string name="_1234">1234</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="user">user</string>
    <string name="descripci">descripció</string>
    <string name="_12345">12345</string>
    <string name="home">Home</string>
    <string name="newest">Newest</string>
    <string name="search">Search</string>
    <string name="submit_work">Submit work</string>
    <string name="your_works">Your works</string>
    <string name="collection">Collection</string>
    <string name="browsing_history">Browsing history</string>
    <string name="markers">Markers</string>
    <string name="connection">Connection</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="my_pixiv">My pixiv</string>
    <string name="others">Others</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="mute_settings">Mute settings</string>
</resources>