<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1NavDrawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home"/>

        <item
            android:id="@+id/newest"
            android:title="@string/newest"
            android:icon="@drawable/newest"/>

        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/search"/>

    </group>

    <group
        android:id="@+id/group2NavDrawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/submitWork"
            android:title="@string/submit_work"
            android:icon="@drawable/submit_works"/>

        <item
            android:id="@+id/yourWorks"
            android:title="@string/your_works"
            android:icon="@drawable/your_works"/>

        <item
            android:id="@+id/collection"
            android:title="@string/collection"
            android:icon="@drawable/collection"/>

        <item
        android:id="@+id/browsingHistory"
        android:title="@string/browsing_history"
        android:icon="@drawable/browsing_history"/>

        <item
        android:id="@+id/markers"
        android:title="@string/markers"
        android:icon="@drawable/markers"/>

    </group>

    <item android:title="@string/connection">
        <menu>

    <group
        android:id="@+id/group3navDrawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/following"
            android:title="@string/following" />

        <item
            android:id="@+id/followers"
            android:title="@string/followers"
            />

        <item
            android:id="@+id/myPixiv"
            android:title="@string/my_pixiv"
            />

    </group>
        </menu>

    </item>

    <item android:title="@string/others">
        <menu>

    <group
        android:id="@+id/group4navDrawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/feedback"
            android:title="@string/feedback"
            android:icon="@drawable/feedback"/>

        <item
            android:id="@+id/help"
            android:title="@string/help"
            android:icon="@drawable/help"
            />

        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/settings"
            />

        <item
            android:id="@+id/muteSettings"
            android:title="@string/mute_settings"
            />

    </group>
        </menu>

    </item>


</menu>