<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@color/gray"/>

    <ImageView
        android:id="@+id/image_view_novels_recommended"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@color/colorAccent"
        android:layout_marginLeft="25dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/text_view_novels_recommended_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/tile"
        android:layout_toRightOf="@id/image_view_novels_recommended"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/image_view_novels_recommended"
        android:layout_marginStart="30dp" />

    <ImageView
        android:id="@+id/image_view_novels_recommended_like"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/likeheartwhite"
        android:clickable="true"
        android:focusable="true"
        android:layout_toRightOf="@+id/text_view_novels_recommended_title"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/text_view_novels_recommended_title" />

    <TextView
        android:id="@+id/text_view_novels_recommended_user"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_novels_recommended_like"
        android:layout_toRightOf="@+id/image_view_novels_recommended"
        android:layout_marginLeft="30dp"
        android:hint="@string/user"
        android:layout_toEndOf="@+id/image_view_novels_recommended"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/text_view_novels_recommended_description"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image_view_novels_recommended"
        android:layout_below="@+id/text_view_novels_recommended_user"
        android:layout_marginLeft="30dp"
        android:hint="@string/descripci"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/image_view_novels_recommended"
        android:layout_marginStart="30dp" />


    <ImageView
        android:id="@+id/reference"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/likeheartwhite"
        android:layout_below="@+id/image_view_novels_recommended"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/text_view_novels_recommended_numlikes"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_novels_recommended"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/reference"
        android:layout_marginTop="7dp"
        android:hint="@string/_12345"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/reference" />

    




</RelativeLayout>